VP-6329 fix logo overlaps subtitles (#251)
* Let Logo not overlap subtitles

* Bump version; update deps

--- a/packages/player/assets/cc/style.scss
+++ b/packages/player/assets/cc/style.scss
@@ -69,6 +69,7 @@
     bottom: calc(var(--bottom-panel) + 5px);
     width: 100%;
     transition: transform 0.3s ease-out;
+    z-index: 4;
 
     &.media-control-cc-pulled {
       transform: translateY(var(--bottom-panel));
